--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.java.installations.auto-download=true
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.home=/opt/homebrew/opt/openjdk@21/libexec/openjdk.jdk/Contents/Home
