--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,19 @@
 buildscript {
     ext {
-        compose_version = '1.5.0'
-        kotlin_version = '1.9.0'  // Changed from 1.8.10 to 1.9.0
-        agp_version = '8.1.1'
+        compose_version = '1.5.7'
+        kotlin_version = '1.9.22'
+        agp_version = '8.3.2'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath "com.android.tools.build:gradle:$agp_version"
     }
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false  // Updated to 1.9.0
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 }
 
 allprojects {
     repositories {
-        google()
-        // ... other repositories ...
     }
 }
